<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/item_shape">

    <TextView
        android:id="@+id/item_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/sarabun_semibold"
        android:text="@string/city_name"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/item_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/item_city_name"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/item_city_name"
        android:fontFamily="@font/sarabun_semibold"
        android:text="@string/temperature"
        android:textColor="@color/chain_grey"
        android:textSize="15sp"
        tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/item_weather_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/weather_icon"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/weather_picture" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>